--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link href="node_modules\nouislider\dist\nouislider.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
   </head>
@@ -57,7 +58,7 @@
 
                   <!-- Изменение глубины эффекта, накладываемого на изображение -->
                   <fieldset class="img-upload__effect-level  effect-level">
-                    <input class="effect-level__value " type="number" step="any" name="effect-level" value="">
+                    <input class="effect-level__value" type="number" step="any" name="effect-level" value="100">
                     <div class="effect-level__slider"></div>
                   </fieldset>
 
@@ -242,6 +243,7 @@
     </li>
     </template>
 
+  <script src="node_modules\nouislider\dist\nouislider.js"></script>
   <script src="js/main.js" type="module"></script>
 
 </body>
