--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <link href="js\noUIslider\nouislider.css" rel="stylesheet">
+  <link href="nouislider\nouislider.css" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
   </head>
@@ -243,7 +243,7 @@
     </li>
     </template>
 
-  <script src="js\noUIslider\nouislider.js"></script>
+  <script src="nouislider\nouislider.js"></script>
   <script src="js/main.js" type="module"></script>
 
 </body>
